<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Main2Activity"
    android:background="@color/green">


    <WebView
        android:id="@+id/webview_main"
        android:layout_width="@dimen/webview_main_width"
        android:layout_height="@dimen/webview_main_height"
        android:background="#E1DCDC" />


    <TextView
        android:id="@+id/name1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/text_view_act_main_margintop"
        android:background="@drawable/text_background"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/email1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/text_view_act_main_margintop"
        android:background="@drawable/text_background"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/password1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/text_view_act_main_margintop"
        android:textColor="@color/black"
        android:background="@drawable/text_background" />

    <TextView
        android:id="@+id/number1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/text_view_act_main_margintop"
        android:textColor="@color/black"

        android:background="@drawable/text_background" />

    <EditText
        android:id="@+id/url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_view_act_main_margintop"
        android:text="@string/url"
        android:textColorHint="@color/black"/>

    <Button
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_view_act_main_margintop"
        android:textColor="@color/black"
        android:text="@string/search" />

    <Button
        android:id="@+id/permission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_view_act_main_margintop"
        android:text="@string/permission"
        android:textColor="@color/black"/>


</LinearLayout>